@@ -135,7 +135,7 @@ public class Prayer_UnholyArmament extends Prayer
 				I.setDisplayText(L("an wicked looking blade sits here."));
 				((Weapon)I).setWeaponClassification(Weapon.CLASS_SWORD);
 				((Weapon)I).setWeaponDamageType(Weapon.TYPE_SLASHING);
-				I.setDescription(L("Whatever made this sharp twisted thing couldn`t have been good.."));
+				I.setDescription(L("Whatever made this twisted thing couldn`t have been good.."));
 				I.basePhyStats().setLevel(mob.phyStats().level());
 				I.basePhyStats().setWeight(20);
 				I.setMaterial(RawMaterial.RESOURCE_MITHRIL);
@@ -241,6 +241,9 @@ public class Prayer_UnholyArmament extends Prayer
 			A=CMClass.getAbility("Prop_ScrapExplode");
 			if(A!=null)
 				I.addNonUninvokableEffect(A);
+			final Ability unholyA=(Ability)copyOf();
+			unholyA.setMiscText(mob.Name());
+			I.addNonUninvokableEffect(unholyA);
 			I.recoverPhyStats();
 			final int numFound=mob.findItems(null,"$"+I.name()+"$").size() + mob.location().findItems(null,"$"+I.name()+"$").size();
 			if(numFound>=numThatsOk)
