@@ -853,6 +853,16 @@ Usage    : PRAY EMBER [TARGET NAME]\n\r\
 Example  : pray ember bob\n\r\
 The caster causes a small flaming ember to appear and attack the target.
 
+
+EMPOWER_UNHOLY_WEAPON=PRAYER_EMPOWERUNHOLYWEAPON
+PRAYER_EMPOWER_UNHOLY_WEAPON=PRAYER_EMPOWERUNHOLYWEAPON
+PRAYER_EMPOWERUNHOLYWEAPON=<ABILITY>\
+Usage    : PRAY "EMPOWER UNHOLY WEAPON" [TARGET NAME]\n\r\
+Example  : pray "empower unholy weapon" sword\n\r\
+This prayer will permanently empower a weapon created with the \
+unholy armament prayer.  The empowerment depends on the casters \
+level and expertise at the time of the casting.
+
 ENERVATE=PRAYER_ENERVATE
 PRAYER_ENERVATE=<ABILITY>\
 Usage    : PRAY "ENERVATE" [TARGET NAME]\n\r\
@@ -1436,6 +1446,17 @@ Example  : pray "moral balance" orc\n\r\
 This prayer shows evil beings a little bit of the good in the world, \
 and shows good beings some of the evil and corruption.  The result is \
 that the target edges closer and closer to being true neutral 
+
+MORPH_UNHOLY_WEAPON=PRAYER_MORPHUNHOLYWEAPON
+PRAYER_MORPH_UNHOLY_WEAPON=PRAYER_MORPHUNHOLYWEAPON
+PRAYER_MORPHUNHOLYWEAPON=<ABILITY>\
+Usage    : PRAY "MORPH UNHOLY WEAPON" [TARGET NAME] [FORM]\n\r\
+Example  : pray "morph unholy weapon" sword axe\n\r\
+This prayer will permanently morph a weapon created with the \
+unholy armament prayer.  The weapon can take any form the \
+caster specifies, and includes:  sword, sword2h, mace, mace2h, \
+flail, polearm, javelin, crossbow, staff, axe, axe2h, hammer, hammer2h, \
+or dagger
 
 NEUTRALIZE_ITEM=PRAYER_DISENCHANT
 NEUTRALIZE=PRAYER_DISENCHANT
