@@ -1,3 +1,6 @@
+# Build 5.9.9 Release ?/?/2019
+  1. New prayers: empower unholy weapon, morph unholy weapon, faithful hellhound
+  
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
   2. New wainwrighting & smelting recipes
